force-app/main/default/objects/Contact/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Graduate</fullName>
            </value>
            <value>
                <fullName>b. UG</fullName>
            </value>
            <value>
                <fullName>c. Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>