force-app/main/default/objects/Contact/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <label>Student Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>